Fixed the align of the pictures

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -46,3 +46,7 @@ img {
 .img-fluid{
   max-width: 380px;
 }
+
+.centering{
+  text-align: center;
+}
